--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "devDependencies": {
     "jest": "^30.0.5",
     "supertest": "^7.1.4"
+  },
+  "scripts": {
+    "start": "node src/app.js",
+    "reset": "pkill -f 'node src/app.js' && node src/app.js",
+    "stop": "pkill -f 'node src/app.js'"
   }
 }
